# Neural-Net-Experiments

./: .gitignore  CMakeLists.txt  LICENCE.txt  Makefile  README.md  README.txt  main.cpp  mnist.cpp  net.cpp  net.hpp  tests.cpp
samples/: cpu_mnist.cpp  gpu_mnist.cpp  mnist.cpp
src/: functions.hpp  net.hpp  net_cpu.hpp  net_gpu.hpp  net_gpu_impl.cu  net_gpu_impl.hpp  net_raw.hpp  net_raw_utils.hpp
tests/: main.cpp  net.cpp  net_cpu.cpp  net_gpu.cpp  net_raw_utils.cpp
tools/: convert_to_arma.cpp
